@@ -9,6 +9,8 @@ asymptote 2.31 - checked 17may14
   see http://tug.org/texlive/build.html#asymptote
   and tlpkg/bin/tl-update-asy
 
+devnag - from devanagari package installed in texmf-dist.
+
 m-tx 0.60d - checked 16apr12
   http://mirror.ctan.org/support/m-tx/
 
