@@ -1,3 +1,9 @@
+2014-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* Makefile.am (AM_CPPFLAGS): Define TEXLIVE.
+	* src/devnag.c: Use binary mode for output files only when
+	compiling for TeX Live.
+
 2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* src/devnag.c: Avoid undefined behaviour when char is signed.
